--- a/Thiết kế và lập trình web/index.html
+++ b/Thiết kế và lập trình web/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    <div id="box1">
+    <!-- <div id="box1">
         <h2>Tiêu đề 1</h2>
         <p>According to the email from Twitter, staff members will get notices either through their company email accounts — if they still have jobs — or their personal email accounts if their "employment is impacted."</p>
     <a href="https://www.nbcnews.com/business/business-news/twitter-layoffs-elon-musk-fires-staff-how-many-rcna54799">Facebook</a>
@@ -20,6 +20,21 @@
     <div id="box2">
         <h2>Tiêu đề 2</h2>
         <p>Đoạn văn 2</p>
+    </div> -->
+
+    <!-- <div id="box1">
+        Demo box model
     </div>
+    <div id="box2"></div>
+    <div id="box3"></div>
+    <div id="box4"></div>
+    <div id="box5"></div>
+    <div id="box6"></div> -->
+    <div id="conteiner">
+        <div id="box1">Box1</div>
+        <div id="box2">Box2</div>
+        <div id="box3">Box3</div>
+    </div>
+
 </body>
 </html>
